# test-guard

./: .gitignore  PLAN.md  README.md  action.yml  pyproject.toml  requirements.txt
.dev/: local_pr_test.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  dogfood.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-2-display-names.txt  task-2-identifiers-preserved.txt  task-3-l1-skip-empty.txt  task-4-empty-source-message.txt  task-5-tldr-fail.txt  task-5-tldr-pass.txt  task-7-display-check.txt  task-7-full-regression.txt  task-7-identifiers.txt  task-f3-manual-qa.txt
.sisyphus/plans/: 2026-04-28-layer3-token-budget-and-413-fallback.md  2026-05-06-coverage-path-realignment.md  report-readability-v1.4.md
prompts/: summary_explainer.txt  test_adequacy.txt
src/: config.py  coverage_normalizer.py  github_api.py  github_client.py  layer1_coverage.py  layer2_heuristic.py  layer3_ai.py  main.py  models.py  summary.py
tests/: conftest.py  test_config.py  test_coverage_normalizer.py  test_github_api.py  test_github_client.py  test_layer1_coverage.py  test_layer2_heuristic.py  test_layer3_ai.py  test_main.py  test_models.py  test_summary.py
tests/fixtures/: sample_ai_response.json  sample_cobertura.xml
