[project]
name = "test-guard"
version = "0.1.0"
description = "Hybrid PR test adequacy gate for GitHub Actions"
requires-python = ">=3.12"
license = "MIT"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "S",   # bandit (security)
    "B",   # bugbear
    "SIM", # simplify
    "RUF", # ruff-specific
]
ignore = [
    "S101", # assert in tests is fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]
"src/models.py" = ["S105"]
"src/layer1_coverage.py" = ["S603", "S607"]

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
